@@ -123,6 +123,7 @@ Compiler     DKVER Values
 tdm          tdm-32-4.6.1, tdm-64-4.6.1, tdm-32-4.5.2 (*)
 mingw        mingw-32-4.6.2, mingw-32-4.5.2, mingw-32-3.4.5
 mingw64      mingw64-32-4.7.1, mingw64-32-4.6.3
+mingwbuilds  mingwbuilds-32-4.7.1
 
 (*) = default build toolchain
 
